Fix button text on mobile

--- a/directory_components/export_elements/sass/partials/_mixins.scss
+++ b/directory_components/export_elements/sass/partials/_mixins.scss
@@ -107,6 +107,7 @@
   @media (max-width: 640px) {
     width: 100%;
     margin-bottom: 15px;
+    text-align: center;
   }
 }
 
